--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+# Create a complete requirements.txt file
+@"
 streamlit>=1.28.0
 pandas>=2.0.0
+numpy>=1.24.0
 plotly>=5.17.0
-pillow>=10.0.0
+folium>=0.14.0
 matplotlib>=3.7.0
+seaborn>=0.12.0
+pillow>=10.0.0
+geopandas>=0.14.0
+pydeck>=0.8.0
+"@ | Out-File -FilePath requirements.txt -Encoding UTF8
